--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
+                <li class="sidebar-brand"><a href="#page-top">Menu</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">activity</a></li>
                 <li class="sidebar-nav-item"><a href="#services">certificate</a></li>
@@ -33,7 +33,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Portfolio</h1>
+                <h1 class="mb-1">portfolio</h1>
                 <h3 class="mb-5"><em>ณธภัค ภัทรพงศ์วัฒนา</em></h3>
                 
             </div>
