--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">Menu</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">activity</a></li>
+                <li class="sidebar-nav-item"><a href="index.html">Home</a></li>
+                <li class="sidebar-nav-item"><a href="profile.html">profile</a></li>
                 <li class="sidebar-nav-item"><a href="#services">certificate</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
@@ -38,8 +38,8 @@
                 
             </div>
         </header>
-        <!-- About-->
-        <section class="content-section bg-light" id="about">
+        <!-- profile-->
+        <section class="content-section bg-orenge" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gxlg-5- justify-content-center">
                     <div class="col-lg-10">
@@ -49,9 +49,7 @@
                         <p class="lead mb-5">
                             This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
                             <a href="https://unsplash.com/">Unsplash</a>
-                            !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
                     </div>
                 </div>
             </div>
