new file and edit little

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Menu</a></li>
-                <li class="sidebar-nav-item"><a href="index.html">Home</a></li>
-                <li class="sidebar-nav-item"><a href="profile.html">profile</a></li>
-                <li class="sidebar-nav-item"><a href="#services">certificate</a></li>
-                <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+                <li class="sidebar-brand"><a>MENU</a></li>
+                <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
+                <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
+                <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
+                <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
             </ul>
         </nav>
         <!-- Header-->
