--- a/profile.html
+++ b/profile.html
@@ -26,12 +26,12 @@
     <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <li class="sidebar-brand"><a href="#page-top">Menu</a></li>
-            <li class="sidebar-nav-item"><a href="index.html">Home</a></li>
-            <li class="sidebar-nav-item"><a href="profile.html">profile</a></li>
-            <li class="sidebar-nav-item"><a href="#services">certificate</a></li>
-            <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-            <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+            <li class="sidebar-brand"><a>MENU</a></li>
+                <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
+                <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
+                <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
+                <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
         </ul>
     </nav>
     <!-- profile-->
@@ -51,6 +51,8 @@
              </div>
         </div>
     </section>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
