cerficate ang css

--- a/cerficate.html
+++ b/cerficate.html
@@ -1,38 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>My Portfolio </title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Simple line icons-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a>MENU</a></li>
-                <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
-                <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
-                <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-                <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
-            </ul>
-        </nav>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>My Portfolio </title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Simple line icons-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+        rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+        rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+    <!-- Navigation-->
+    <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand"><a>MENU</a></li>
+            <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
+            <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
+            <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
+            <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+            <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+        </ul>
+    </nav>
+    <!-- CERTIFICATE-->
+    <section class="content-section" id="portfolio">
+        <div class="container px-4 px-lg-5">
+            <div class="container">
+                <div class="content-box">
+                    <div class="content-section-heading">
+                        <div class="content-section-heading text-center">
+                            <h2 class="mb-0 ">CERFICATE</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="height: 2rem;"></div>
+            <div class="col">
+                <div class="col-lg-6">
+                    <img class="img-fluid" style="position: relative; right:5rem"  src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg" alt="..." />
+                </div>
+                <div style="height: 2rem;"></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg" alt="..." />
+                </div>
+                <div style="height: 2rem;"></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg" alt="..." />
+                </div>
+                <div style="height: 2rem;"></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg" alt="..." />
+                </div>
+                <div style="height: 2rem;"></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg" alt="..." />
+                </div>
+                <div style="height: 2rem;"></div>
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg" alt="..." />
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
