--- a/profile.html
+++ b/profile.html
@@ -42,11 +42,9 @@
                     <div class="mb-5">
                         <h2>PROFILE</h2>
                     </div>
-                    <p>
-                        This theme features a flexible, UX-friendly sidebar menu and stock photos from our friends at
-                        <a href="https://unsplash.com/" target="_blank" rel="noopener">Unsplash</a>.
-                    </p>
-
+                    <div>
+                        
+                    </div>
                 </div>
              </div>
         </div>
