--- a/cerficate.html
+++ b/cerficate.html
@@ -47,11 +47,24 @@
                 </div>
             </div>
             <div style="height: 2rem;"></div>
-            <div class="col">
-                <div class="col-lg-6">
-                    <img class="img-fluid" style="position: relative; right:5rem"  src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg" alt="..." />
+            <div class="row gx-0">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1 scale:3;">
+                            <img class="img-fluid" src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"alt="..." />
+                        </div>
+                        <div class="" style="flex:2; position:middle ">
+                            <div class="content-box">
+                                <div class="content-section-heading">
+                                    <div class="content-section-heading text-center">
+                                        <p class="mb-0 " style="font-size: 23px;">ไปแข่งขันศิลปหัตกรรมระดับเขตการศืกษา<br>การแข่งขันหุ่นยนต์ระดับกลาง<br>ได้รับรางวัลระดับเหรียญทองแดง</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div style="height: 2rem;"></div>
+                <div></div>
                 <div class="col-lg-6">
                     <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg" alt="..." />
                 </div>
