add image and finish certificate page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
                 <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
                 <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-                <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+                <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
                 <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
             </ul>
         </nav>
@@ -89,46 +89,7 @@
             </div>
         </section>
         
-        <!-- CERTIFICATE-->
-        <section class="content-section" id="portfolio">
-            <div class="container px-4 px-lg-5">
-                <div class="content-section-heading text-center">
-                    <h2 class="mb-5">CERFICATE</h2>
-                </div>
-                <div class="row gx-0">
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg" alt="..." />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg" alt="..." />
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
