--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
                 <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
                 <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
                 <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-                <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+                <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
                 <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
         </ul>
     </nav>
