--- a/cerficate.html
+++ b/cerficate.html
@@ -30,7 +30,7 @@
             <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
             <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
             <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-            <li class="sidebar-nav-item"><a href="cerficate.html">CERFICATE</a></li>
+            <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
             <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
         </ul>
     </nav>
@@ -41,7 +41,7 @@
                 <div class="content-box">
                     <div class="content-section-heading">
                         <div class="content-section-heading text-center">
-                            <h2 class="mb-0 ">CERFICATE</h2>
+                            <h2 class="mb-0 ">CERTIFICATE</h2>
                         </div>
                     </div>
                 </div>
@@ -50,39 +50,189 @@
             <div class="row gx-0">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6" style="flex:1 scale:3;">
-                            <img class="img-fluid" src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"alt="..." />
-                        </div>
-                        <div class="" style="flex:2; position:middle ">
+                        <div class="col-lg-6" style="flex:1;">
                             <div class="content-box">
-                                <div class="content-section-heading">
-                                    <div class="content-section-heading text-center">
-                                        <p class="mb-0 " style="font-size: 23px;">ไปแข่งขันศิลปหัตกรรมระดับเขตการศืกษา<br>การแข่งขันหุ่นยนต์ระดับกลาง<br>ได้รับรางวัลระดับเหรียญทองแดง</p>
+                                <img class="img-fluid" src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมการแข่งขันศิลปหัตกรรมระดับเขตการศืกษา<br>การแข่งขันหุ่นยนต์ระดับกลาง<br>ได้รับรางวัลระดับเหรียญทองแดง
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                                ได้เข้าร่วมกิจกรรม work shop อบรมการต่อวงจรไฟฟ้า<br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div></div>
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg" alt="..." />
-                </div>
-                <div style="height: 2rem;"></div>
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg" alt="..." />
-                </div>
-                <div style="height: 2rem;"></div>
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg" alt="..." />
-                </div>
-                <div style="height: 2rem;"></div>
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg" alt="..." />
-                </div>
-                <div style="height: 2rem;"></div>
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg" alt="..." />
+                    <div style="height: 2rem;"></div>
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1 scale:3;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมกิจกรรม open house แนะนำแนวทางการศีกษาต่อ <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                                ได้เข้าร่วมการแข่งขันการแก้ไขปัณหาโดยการ<br>เขียนโปรแกรมคอมพิวเตอร์
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height: 2rem;"></div>
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1 scale:3;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมกิจกรรม engineer open house  <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                                ได้เข้าร่วมการอบรม PIM Young Creative Program<br>ที่สถาบันการจัดการปัญญาภิวัฒน์
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/IMG_20240208_192707.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมการอบรมเชิงปฎิบัติการ<br>ARSA Framework:Generative AI<br>จัดขี้นโดยสำนักงานวิจัยแห่งชาติ
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/IMG_20240710_112446_1.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                                ได้เข้าร่วมการอบรมระยะสั้นภายใต้หัวข้อ<br>"การเขียนโปรแกรมและวิทยาการหุ่นยนต์เบื่องต้น"<br>ที่สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height: 2rem;"></div>
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/IMG_20241018_140707_1.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมเสนอผลงานในหัวข้อ<br>"Suthi Innovation Exhibition 2023"
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/Screenshot_2024_1020_083041.jpg"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
+                                                ได้เข้าร่วมการแข่งขัน CUBS BLOCKKATHON ในหัวข้อ<br>"การนำเสนอการแก้ปัญหาทางธุรกิจโดยการใช้ block chain"
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="height: 2rem;"></div>
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1;">
+                            <div class="content-box">
+                                <img class="img-fluid" src="assets/img/Screenshot 2024-12-18 211032.png"
+                                    alt="..." />
+                                <div class="">
+                                    <div class="content-section-heading">
+                                        <div class="content-section-heading text-center">
+                                            <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
+                                                ได้เข้าร่วมทดสอบตนเองในสายงาน software engineer<br>จัดขี้นโดย quick try
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6" style="flex:2 scale:2;">
+                        </div>
+                    </div>
+                    <div style="height: 2rem;"></div>
                 </div>
             </div>
         </div>
