--- a/profile.html
+++ b/profile.html
@@ -27,11 +27,11 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a>MENU</a></li>
-                <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
-                <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
-                <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-                <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
+            <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
+            <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
+            <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
+            <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
         </ul>
     </nav>
     <!-- profile-->
@@ -42,11 +42,82 @@
                     <div class="mb-5">
                         <h2>PROFILE</h2>
                     </div>
-                    <div>
-                        
+                    <div class="row">
+                        <div class="col-lg-6" style="flex:1;">
+                            <img class="img-fluid" src="assets/img/IMG_20241218_165651.jpg" alt="..."
+                                style="max-width: 330px; margin-left: 5rem; margin-bottom: 1rem;">
+                        </div>
+                        <div class="col-lg-6" style="flex:2;">
+                            <div class="mb-0">
+                                <div class="content-box" style="height: 65px; margin-bottom:5px;">
+                                    <h1 style="margin-top:-1rem ;">ประวัติส่วนตัว</h1>
+                                </div>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    ชื่อ : ณธภัค
+                                    ภัทรพงศ์วัฒนา</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    ชื่อเล่น : พีช</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    อายุ : 17ปี</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    สัญชาติ : ไทย</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    เชื้อชาติ : ไทย</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    ศาสนา : พุทธ</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:1rem">
+                                    เกิดวันที่ : 11 มกราคม
+                                    2550</p>
+                                <div class="content-box" style="height: 65px; margin-bottom:5px;">
+                                    <h1 style="margin-top:-1rem ;">ความสามารถ</h1>
+                                </div>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    เขียนโค้ด ภาษา c</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 10rem; margin-bottom:0rem">
+                                    ภาษา python</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 10rem; margin-bottom:1rem">
+                                    ภาษา Html 5 & CSS</p>
+                                <div class="content-box" style="height: 65px; margin-bottom:5px;">
+                                    <h1 style="margin-top:-1rem ;">งานอดิเรก</h1>
+                                </div>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    เล่นเกม</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                    อ่านหนังสือ</p>
+                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:1rem">
+                                    ฟังเพลง</p>
+                                <div class="content-box" style="height: 65px; margin-bottom:5px;">
+                                    <h1 style="margin-top:-1rem ;">ข้อมูลติดต่อ</h1>
+                                </div>
+                                <!-- Footer-->
+                                <footer class="footer text-center" style="padding-top: 2rem;">
+                                    <div class="container px-4 px-lg-5">
+                                        <ul class="list-inline mb-5">
+                                            <li class="list-inline-item">
+                                                <a class="social-link rounded-circle text-white mr-3"
+                                                    href="https://www.facebook.com/profile.php?id=100018143700682&locale=th_TH"><i
+                                                        class="icon-social-facebook"></i></a>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <a class="social-link rounded-circle text-white mr-3"
+                                                    href="https://www.instagram.com/pce.ntp_07/"><i
+                                                        class="icon-social-instagram"></i></a>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <a class="social-link rounded-circle text-white"
+                                                    href="https://github.com/juji404"><i
+                                                        class="icon-social-github"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </footer>
+                                <p style="text-align: center; font-size:2rem; margin-bottom:0rem; margin-top:-2rem;">
+                                    tel: 0957021611</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
     </section>
     <!-- Bootstrap core JS-->
