--- a/cerficate.html
+++ b/cerficate.html
@@ -235,12 +235,31 @@
                     <div style="height: 2rem;"></div>
                 </div>
             </div>
+            <div class="content-box" style="height:115px ; width: 400px; margin-left:20rem">
+                <!-- Footer-->
+                <footer class="footer text-center">
+                    <div class="container px-4 px-lg-5">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/profile.php?id=100018143700682&locale=th_TH"><i class="icon-social-facebook"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/pce.ntp_07/"><i class="icon-social-instagram"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white" href="https://github.com/juji404"><i class="icon-social-github"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </footer>
+            </div>
         </div>
     </section>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
+    
 </body>
 
 </html>
