edit cer and profile

--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>My Portfolio </title>
@@ -37,17 +37,22 @@
     <!-- profile-->
     <section class="content-section" id="about">
         <div class="container">
-            <div class="content-box">
+            <div class="content-box" style="min-width: 666px;">
                 <div class="content-section-heading">
-                    <div class="mb-5">
+                    <div class="mb-0">
                         <h2>PROFILE</h2>
                     </div>
+                </div>
+            </div>
+            <div style="height: 2rem;"></div>
+            <div class="content-box" style="min-width: 666px;">
+                <div class="content-section-heading">
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <img class="img-fluid" src="assets/img/IMG_20241218_165651.jpg" alt="..."
-                                style="max-width: 330px; margin-left: 5rem; margin-bottom: 1rem;">
+                                style="max-width: 330px; margin-bottom: 2rem">
                         </div>
-                        <div class="col-lg-6" style="flex:2;">
+                        <div class="col-lg-6" style="flex:2; min-width:556px; ">
                             <div class="mb-0">
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">ประวัติส่วนตัว</h1>
