--- a/cerficate.html
+++ b/cerficate.html
@@ -36,7 +36,7 @@
     </nav>
     <!-- CERTIFICATE-->
     <section class="content-section" id="portfolio">
-        <div class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5 " style="min-width: 755px;">
             <div class="container">
                 <div class="content-box">
                     <div class="content-section-heading">
@@ -52,7 +52,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
+                                <img class="img-fluid"  src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -73,7 +73,8 @@
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
-                                                ได้เข้าร่วมกิจกรรม work shop อบรมการต่อวงจรไฟฟ้า<br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                                ได้เข้าร่วมกิจกรรม work shop
+                                                อบรมการต่อวงจรไฟฟ้า<br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
                                         </div>
                                     </div>
@@ -91,7 +92,8 @@
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
-                                                ได้เข้าร่วมกิจกรรม open house แนะนำแนวทางการศีกษาต่อ <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                                ได้เข้าร่วมกิจกรรม open house แนะนำแนวทางการศีกษาต่อ
+                                                <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
                                         </div>
                                     </div>
@@ -124,7 +126,8 @@
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
-                                                ได้เข้าร่วมกิจกรรม engineer open house  <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
+                                                ได้เข้าร่วมกิจกรรม engineer open house
+                                                <br>ที่มหาวิทยาลัยพระจอมเกล้าธนบุรี
                                             </p>
                                         </div>
                                     </div>
@@ -139,7 +142,8 @@
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
-                                                ได้เข้าร่วมการอบรม PIM Young Creative Program<br>ที่สถาบันการจัดการปัญญาภิวัฒน์
+                                                ได้เข้าร่วมการอบรม PIM Young Creative
+                                                Program<br>ที่สถาบันการจัดการปัญญาภิวัฒน์
                                             </p>
                                         </div>
                                     </div>
@@ -150,13 +154,13 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/IMG_20240208_192707.jpg"
-                                    alt="..." />
+                                <img class="img-fluid" src="assets/img/IMG_20240208_192707.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top: 1.5rem;">
-                                                ได้เข้าร่วมการอบรมเชิงปฎิบัติการ<br>ARSA Framework:Generative AI<br>จัดขี้นโดยสำนักงานวิจัยแห่งชาติ
+                                                ได้เข้าร่วมการอบรมเชิงปฎิบัติการ<br>ARSA Framework:Generative
+                                                AI<br>จัดขี้นโดยสำนักงานวิจัยแห่งชาติ
                                             </p>
                                         </div>
                                     </div>
@@ -165,8 +169,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/IMG_20240710_112446_1.jpg"
-                                    alt="..." />
+                                <img class="img-fluid" src="assets/img/IMG_20240710_112446_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -183,8 +186,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/IMG_20241018_140707_1.jpg"
-                                    alt="..." />
+                                <img class="img-fluid" src="assets/img/IMG_20241018_140707_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -198,13 +200,13 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/Screenshot_2024_1020_083041.jpg"
-                                    alt="..." />
+                                <img class="img-fluid" src="assets/img/Screenshot_2024_1020_083041.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
                                             <p class="mb-0 " style="font-size: 23px; margin-top:1.5rem">
-                                                ได้เข้าร่วมการแข่งขัน CUBS BLOCKKATHON ในหัวข้อ<br>"การนำเสนอการแก้ปัญหาทางธุรกิจโดยการใช้ block chain"
+                                                ได้เข้าร่วมการแข่งขัน CUBS BLOCKKATHON
+                                                ในหัวข้อ<br>"การนำเสนอการแก้ปัญหาทางธุรกิจโดยการใช้ block chain"
                                             </p>
                                         </div>
                                     </div>
@@ -216,8 +218,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box">
-                                <img class="img-fluid" src="assets/img/Screenshot 2024-12-18 211032.png"
-                                    alt="..." />
+                                <img class="img-fluid" src="assets/img/Screenshot 2024-12-18 211032.png" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -233,33 +234,39 @@
                         </div>
                     </div>
                     <div style="height: 2rem;"></div>
+                    <!-- Footer-->
+                    <div class="content-box" style="height:115px ; width: 400px; margin:auto">
+                        <footer class="footer text-center">
+                            <div class="container px-4 px-lg-5">
+                                <ul class="list-inline mb-0">
+                                    <li class="list-inline-item">
+                                        <a class="social-link rounded-circle text-white mr-3"
+                                            href="https://www.facebook.com/profile.php?id=100018143700682&locale=th_TH"><i
+                                                class="icon-social-facebook"></i></a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a class="social-link rounded-circle text-white mr-3"
+                                            href="https://www.instagram.com/pce.ntp_07/"><i
+                                                class="icon-social-instagram"></i></a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a class="social-link rounded-circle text-white"
+                                            href="https://github.com/juji404"><i class="icon-social-github"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </footer>
+                    </div>
                 </div>
             </div>
-            <div class="content-box" style="height:115px ; width: 400px; margin-left:20rem">
-                <!-- Footer-->
-                <footer class="footer text-center">
-                    <div class="container px-4 px-lg-5">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/profile.php?id=100018143700682&locale=th_TH"><i class="icon-social-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/pce.ntp_07/"><i class="icon-social-instagram"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="social-link rounded-circle text-white" href="https://github.com/juji404"><i class="icon-social-github"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </footer>
-            </div>
+
         </div>
     </section>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    
+
 </body>
 
 </html>
