--- a/cerficate.html
+++ b/cerficate.html
@@ -36,7 +36,7 @@
     </nav>
     <!-- CERTIFICATE-->
     <section class="content-section" id="portfolio">
-        <div class="container px-4 px-lg-5 " style="min-width: 755px;">
+        <div class="container px-4 px-lg-5 ">
             <div class="container">
                 <div class="content-box">
                     <div class="content-section-heading">
