--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,7 @@
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    
 </head>
 
 <body>
@@ -37,7 +38,7 @@
     <!-- profile-->
     <section class="content-section" id="about">
         <div class="container">
-            <div class="content-box" style="min-width: 666px;">
+            <div class="content-box">
                 <div class="content-section-heading">
                     <div class="mb-0">
                         <h2>PROFILE</h2>
@@ -45,14 +46,14 @@
                 </div>
             </div>
             <div style="height: 2rem;"></div>
-            <div class="content-box" style="min-width: 666px;">
+            <div class="content-box">
                 <div class="content-section-heading">
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <img class="img-fluid" src="assets/img/IMG_20241218_165651.jpg" alt="..."
                                 style="max-width: 330px; margin-bottom: 2rem">
                         </div>
-                        <div class="col-lg-6" style="flex:2; min-width:556px; ">
+                        <div class="col-lg-6" style="flex:2;">
                             <div class="mb-0">
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">ประวัติส่วนตัว</h1>
