final certificate and final profile

--- a/cerficate.html
+++ b/cerficate.html
@@ -56,7 +56,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid"  src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
                                     alt="..." />
                                 <div class="">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg"
                                     alt="..." />
                                 <div class="">
@@ -87,10 +87,9 @@
                             </div>
                         </div>
                     </div>
-                    <div style="height: 2rem;"></div>
                     <div class="row">
                         <div class="col-lg-6" style="flex:1 scale:3;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem">
                                 <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg"
                                     alt="..." />
                                 <div class="">
@@ -106,7 +105,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg"
                                     alt="..." />
                                 <div class="">
@@ -121,10 +120,10 @@
                             </div>
                         </div>
                     </div>
-                    <div style="height: 2rem;"></div>
+                    <div style="height: 1.5rem;"></div>
                     <div class="row">
                         <div class="col-lg-6" style="flex:1 scale:3;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg"
                                     alt="..." />
                                 <div class="">
@@ -140,7 +139,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg"
                                     alt="..." />
                                 <div class="">
@@ -158,7 +157,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/IMG_20240208_192707.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -173,7 +172,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/IMG_20240710_112446_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -190,7 +189,7 @@
                     <div style="height: 2rem;"></div>
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/IMG_20241018_140707_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -204,7 +203,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/Screenshot_2024_1020_083041.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -222,7 +221,7 @@
                     <div style="height: 2rem;"></div>
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
-                            <div class="content-box">
+                            <div class="content-box" style="margin-bottom: 2rem;">
                                 <img class="img-fluid" src="assets/img/Screenshot 2024-12-18 211032.png" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
