--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
                 <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
                 <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
                 <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+                <li class="sidebar-nav-item"><a href="portfolio.html">PROJECT</a></li>
             </ul>
         </nav>
         <!-- Bootstrap core JS-->
