--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            p {
+                font-size: clamp(15px, 2.5vw, 23px); /* ขนาดเริ่มต้น 18px, เพิ่มตาม 2.5vw, สูงสุด 23px */
+            }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -27,7 +32,7 @@
                 <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
                 <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
                 <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+                <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
             </ul>
         </nav>
         <!-- Header-->
