--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,14 @@
         rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    
+    <style>
+        p {
+            font-size: clamp(15px, 4vw, 1.7rem);
+        }
+        img {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -32,7 +39,7 @@
             <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
             <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
             <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-            <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
         </ul>
     </nav>
     <!-- profile-->
@@ -49,48 +56,48 @@
             <div class="content-box">
                 <div class="content-section-heading">
                     <div class="row">
-                        <div class="col-lg-6" style="flex:1;">
+                        <div class="col-lg-6" style="flex:1; padding:auto">
                             <img class="img-fluid" src="assets/img/IMG_20241218_165651.jpg" alt="..."
-                                style="max-width: 330px; margin-bottom: 2rem">
+                                style="max-width: 330px; min-width:250px ; margin-bottom: 2rem;">
                         </div>
                         <div class="col-lg-6" style="flex:2;">
                             <div class="mb-0">
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">ประวัติส่วนตัว</h1>
                                 </div>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     ชื่อ : ณธภัค
                                     ภัทรพงศ์วัฒนา</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     ชื่อเล่น : พีช</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     อายุ : 17ปี</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     สัญชาติ : ไทย</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     เชื้อชาติ : ไทย</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     ศาสนา : พุทธ</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:1rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:1rem">
                                     เกิดวันที่ : 11 มกราคม
                                     2550</p>
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">ความสามารถ</h1>
                                 </div>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     เขียนโค้ด ภาษา c</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 10rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 10rem; margin-bottom:0rem">
                                     ภาษา python</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 10rem; margin-bottom:1rem">
+                                <p style="text-align: left; margin-left: 10rem; margin-bottom:1rem">
                                     ภาษา Html 5 & CSS</p>
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">งานอดิเรก</h1>
                                 </div>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     เล่นเกม</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:0rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:0rem">
                                     อ่านหนังสือ</p>
-                                <p style="text-align: left; font-size:1.7rem; margin-left: 3rem; margin-bottom:1rem">
+                                <p style="text-align: left; margin-left: 3rem; margin-bottom:1rem">
                                     ฟังเพลง</p>
                                 <div class="content-box" style="height: 65px; margin-bottom:5px;">
                                     <h1 style="margin-top:-1rem ;">ข้อมูลติดต่อ</h1>
