--- a/activity.html
+++ b/activity.html
@@ -27,12 +27,25 @@
                 <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
                 <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
                 <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+                <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
             </ul>
         </nav>
+        <section class="content-section" id="portfolio">
+            <div class="container px-4 px-lg-5 ">
+                <div class="container">
+                    <div class="content-box">
+                        <div class="content-section-heading">
+                            <div class="content-section-heading text-center">
+                                <h2 class="mb-0" style="">ACTIVITY</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
-=</html>
+</html>
