--- a/cerficate.html
+++ b/cerficate.html
@@ -36,7 +36,7 @@
             <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
             <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
             <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-            <li class="sidebar-nav-item"><a href="portfolio.html">PORTFOLIO</a></li>
+            <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
         </ul>
     </nav>
     <!-- CERTIFICATE-->
